refactor(lottos): Lottos 생성자 내 unmodifiableList() -> List.copyOf 변경