@@ -1,6 +1,5 @@
 package domain;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
@@ -10,10 +9,11 @@ public class Lottos {
 
     public Lottos(final List<Lotto> lottos) {
         Objects.requireNonNull(lottos, ERROR_MESSAGE_FOR_NULL_OR_EMPTY_LIST);
-        final List<Lotto> unmodifiableLottos = Collections.unmodifiableList(lottos);
+
+        final List<Lotto> copiedLottos = List.copyOf(lottos);
         validateEmpty(lottos);
 
-        this.lottos = unmodifiableLottos;
+        this.lottos = copiedLottos;
     }
 
     private void validateEmpty(List<Lotto> lottos) {
